creating_dashboards_using_flight_summary_data

--- a/creating_dashboards_using_flight_summary_data_.ipynb
+++ b/creating_dashboards_using_flight_summary_data_.ipynb
@@ -196,11 +196,19 @@
         "   return [dcc.Graph(figure=fig1),\n",
         "            dcc.Graph(figure=fig2) ]\n",
         "if __name__ == '__main__':\n",
-        "    app.run()\n",
-        ""
+        "    app.run()\n"
       ],
       "metadata": {
         "id": "Fga30QXeIC66"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "APNQT-ZmzO6B"
       },
       "execution_count": null,
       "outputs": []
